Project dw_cardeals {
    dbdatabase_type: 'MySQL'
    Note: 'Car Deals Database'
}

Table DIM_Car{
    sk_car int [pk,increment,note: 'Surrogate key DIM_Car.']
    variant varchar(150) [not null,note: 'Car variant.']
    model varchar(150) [not null,note: 'Car model.']
    brand varchar(100) [not null,note: 'Car make.']
    torque varchar(8) [not null,note: 'Car torque in cc.']
    power varchar(8) [not null,note: 'Car power in cv.']
    type varchar (150) [not null,note: 'Car type.']
    fuel varchar(80) [not null,note: 'Car fuel.']
    seats int [not null,note: 'Car seat number.']
    doors int [not null,note: 'Car door number.']
    transmission varchar(80) [not null,note: 'Car transmission.']
    color varchar(80) [not null,note: 'Car color.']
    origin varchar(80) [not null,note: 'Car origin.']
    supplier varchar(80) [not null,note: 'Car supplier.']
    warranty char(3) [not null,note: 'Car warranty is "Sim" ou "Não".']
    registration_date date [note: 'Car Date, in month/year']
    plate char(8) [not null,note: 'Car plate number.']
    vin varchar(17) [note: 'Car vin number, it can be null.']
    description varchar(500) [note: 'Car descripton or extra information.']
}

Table DIM_Stand{
    sk_stand int [pk,increment,note: 'Surrogate key DIM_Stand.'] 
    phone char(9) [not null,note: 'Stand Phone Number.'] 
    address varchar(200) [not null,note: 'Stand Address.'] 
    postal_code varchar(10) [not null,note: 'Stand Postal Code.'] 
    city varchar(80) [not null,note: 'Stand City.'] 
    commercial_director_name varchar [not null,note: 'Commercial Director Name.'] 
    commercial_director_phone_1 char(9) [not null,note: 'Commercial Director Phone Number 1.'] 
    commercial_director_phone_2 char(9) [note: 'Commercial Director Phone Number 2. Can be null.'] 
}

Table DIM_Page{
    sk_page int [pk,increment,note: 'Surrogate key DIM_Page.']
    title varchar(150) [note: 'Car deal page title.']
    url varchar(150) [note: 'Car deal page url link.']
}

Table DIM_Calendar{
    sk_calendar int [pk,increment,note: 'Surrogate key DIM_Page.']
    date_text date
    datekey int 
    day_number int
    day int
    day_of_year int
    day_of_year_number int
    day_of_week_english varchar(9)
    day_of_week_portuguese varchar(13)
    day_of_week_number int
    week_of_year int
    month_english varchar(9)
    month_portuguese varchar(9)
    short_month char(3)
    quarter char(2)
    half_of_year char(2)
    beginning_of_month date
    beginning_of_quarter date
    beginning_of_half_year date
    beginning_of_year date
    beginning_of_month_label varchar(50)
    beginning_of_month_label_short varchar(50)
    beginning_of_quarter_label varchar(50)
    beginning_of_quarter_label_short varchar(50)
    beginning_of_half_year_label varchar(50)
    beginning_of_half_year_label_short varchar(50)
    beginning_of_year_label varchar(50)
    beginning_of_year_label_short varchar(50)
    calendar_day_label varchar(50)
    calendar_day_label_short varchar(50)
    calendar_week_number int
    calendar_week_label varchar(50)
    calendar_month_number int
    calendar_month_label varchar(50)
    calendar_month_year_label varchar(50)
    calendar_quarter_number int
    calendar_quarter_label varchar(12)
    calendar_quarter_year_label  varchar(12)
    calendar_half_of_year_number int
    calendar_half_of_year_label char(9)
    calendar_year_half_of_year_label char(7)
    calendar_year int
    calendar_year_label char(6)
    fiscal_month_number int
    fiscal_month_label char(9)
    fiscal_quarter_number int
    fiscal_quarter_label char(9)
    fiscal_half_of_year_number int
    fiscal_half_of_year_label char(9)
    fiscal_year int
    fiscal_year_label char(6)
    date_key long
    year_week_key int
    year_month_key int
    year_quarter_key int
    year_half_of_year_key int
    year_key int
    beginning_of_month_key int
    beginning_of_quarter_key int 
    beginning_of_half_year_key int
    beginning_of_year_key int
    fiscal_year_month_key int
    fiscal_year_quarter_key int
    fiscal_year_half_of_year_key int
    iso_week_number iny
    portuguese_holiday_flag int
    portuguese_holiday_name varchar(20)
    portuguese_holiday_type varchar(20)
}

Table FACT_CarDeals{
  sk_car int
  sk_stand int
  sk_page int
  sk_publication_day int
  sk_registration_date int
  id int [pk,note:'Degenerate Dimension']
  price int
  mileage int
}

Ref:FACT_CarDeals.sk_car > DIM_Car.sk_car // many-to-one
Ref:FACT_CarDeals.sk_stand > DIM_Stand.sk_stand // many-to-one
Ref:FACT_CarDeals.sk_page > DIM_Page.sk_page // many-to-one
Ref:FACT_CarDeals.sk_publication_day > DIM_Calendar.sk_calendar // many-to-one










